# Equity-Tracker

./: .gitattributes  .gitignore  PROJECT_REFERENCE.md  PROJECT_STATUS.md  auto_update_and_restart.ps1  ib_smoke_test.py  ibkr_poller.py  install_autodeploy_task.ps1  start.ps1  tmpclaude-7c96-cwd  todo.md  v2 Strategy.md  v2_implementation_plan.md  watch_beta_common.py  watch_jobs.py  watch_signals.py  watch_training.py
Bob/: INDEX.md  (+15 more)
equity_tracker/: .dockerignore  Caddyfile  Dockerfile  README.md  alembic.ini  check_alembic.py  launch_run_api_detached.py  pyproject.toml  run_api.py  start.ps1  start_dev.ps1  tmpclaude-90bd-cwd  verify_cols.py
equity_tracker/alembic/: env.py
equity_tracker/alembic/versions/: 001_initial_schema.py  002_security_catalog.py  003_espp_forfeiture.py  004_price_ticker_snapshots.py  005_employment_tax_events.py  006_broker_currency_tracking.py  007_dividend_entries.py  008_backfill_native_currency_prices.py  009_dividend_native_currency_fx.py  010_scenario_snapshots.py  011_portfolio_guardrail_state_events.py  012_security_dividend_reminder_date.py  013_guardrail_state_supports_snoozed.py  014_native_price_ticker_snapshots.py  (+3 more)
equity_tracker/app/: __init__.py  validation_report.py
equity_tracker/docs/: DEMO_DATA.md  SECURITY.md
equity_tracker/scripts/: beta_runtime_review.py  scheduled_beta_runtime_reviews.ps1  seed_demo_db.py  setup_totp.py
equity_tracker/src/: app_context.py  env_bootstrap.py  process_lock.py  settings.py  validation_report.py
equity_tracker/tests/: conftest.py  test_demo_scenarios.py  test_env_bootstrap.py
(+368 files in other folders)
